# tpt-appfront

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  audit.toml  deny.toml  spec.txt  todo 1260716a.md  todo.md
.github/workflows/: ci.yml
crates/appfront-ai-schema/: Cargo.toml  README.md
crates/appfront-ai-schema/src/: ai_schema.rs  json_ld.rs  lib.rs
crates/appfront-canvas/: Cargo.toml  README.md
crates/appfront-canvas/src/: app.rs  auto_optimizer.rs  layout.rs  lib.rs  paint.rs  text.rs
crates/appfront-cli/: Cargo.toml  README.md
crates/appfront-cli/src/: generate.rs  main.rs  templates.rs
crates/appfront-core/: Cargo.toml  README.md
crates/appfront-core/src/: agent.rs  component.rs  devtools.rs  error_boundary.rs  lib.rs  plugin.rs  reconcile.rs  resource.rs  router.rs  signal.rs  store.rs  styling.rs  suspense.rs  ui_tree.rs  virtual_scroll.rs
crates/appfront-core/tests/: component_macro.rs  generate_snippets_compile.rs  integration.rs  view_macro.rs
crates/appfront-dom/: Cargo.toml  README.md
crates/appfront-dom/src/: lib.rs
crates/appfront-dom/tests/: browser.rs
crates/appfront-html/: Cargo.toml  README.md
crates/appfront-html/src/: lib.rs
crates/appfront-macros/: Cargo.toml  README.md
crates/appfront-macros/src/: lib.rs  view.rs
crates/appfront-mcp/: Cargo.toml  README.md
crates/appfront-mcp/src/: lib.rs
crates/appfront-mcp/tests/: stdio_transport.rs
crates/appfront-server/: Cargo.toml  README.md
crates/appfront-server/src/: client_kind.rs  lib.rs  pwa.rs  router.rs
crates/appfront-server/src/router/: command.rs  csrf.rs  handlers.rs
crates/appfront-server/tests/: e2e_test.rs
crates/appfront-tui/: Cargo.toml  README.md
crates/appfront-tui/src/: lib.rs
crates/appfront-webview/: Cargo.toml  README.md
crates/appfront-webview/src/: crash.rs  dialog.rs  lib.rs  logging.rs  manager.rs  secret.rs  sidecar.rs  single_instance.rs  tray.rs
crates/tpt-appfront-ai-schema/: Cargo.toml  README.md
crates/tpt-appfront-ai-schema/src/: ai_schema.rs  json_ld.rs  lib.rs
crates/tpt-appfront-canvas/: Cargo.toml  README.md
crates/tpt-appfront-canvas/src/: app.rs  layout.rs  lib.rs  paint.rs
crates/tpt-appfront-cli/: Cargo.toml  README.md
crates/tpt-appfront-cli/src/: generate.rs  ingest.rs  main.rs  templates.rs
crates/tpt-appfront-core/: Cargo.toml  README.md
crates/tpt-appfront-core/src/: agent.rs  component.rs  components.rs  context.rs  error_boundary.rs  form.rs  lib.rs  plugin.rs  reconcile.rs  static_tree.rs  styling.rs  ui_tree.rs  virtual_scroll.rs
crates/tpt-appfront-core/tests/: component_macro.rs  generate_snippets_compile.rs  integration.rs  view_macro.rs
crates/tpt-appfront-dom/: Cargo.toml  README.md
crates/tpt-appfront-dom/src/: lib.rs
crates/tpt-appfront-dom/tests/: browser.rs  form_controls.rs
crates/tpt-appfront-html/: Cargo.toml  README.md
crates/tpt-appfront-html/src/: lib.rs
crates/tpt-appfront-macros/: Cargo.toml  README.md
crates/tpt-appfront-macros/src/: lib.rs  view.rs
crates/tpt-appfront-mcp/: Cargo.toml  README.md
crates/tpt-appfront-mcp/src/: e2e_helper.rs  lib.rs
crates/tpt-appfront-mcp/tests/: stdio_transport.rs
crates/tpt-appfront-server/: Cargo.toml  README.md
crates/tpt-appfront-server/src/: client_kind.rs  lib.rs  router.rs
crates/tpt-appfront-server/src/router/: caching.rs  command.rs  cors.rs  handlers.rs
crates/tpt-appfront-server/tests/: e2e_test.rs
crates/tpt-appfront-templates/: Cargo.toml  README.md
crates/tpt-appfront-templates/src/: lib.rs
crates/tpt-appfront-tui/: Cargo.toml  README.md
crates/tpt-appfront-tui/src/: lib.rs
crates/tpt-appfront-webview/: Cargo.toml  README.md
crates/tpt-appfront-webview/src/: clipboard.rs  deeplink.rs  dragdrop.rs  lib.rs  manager.rs  notify.rs  shortcut.rs  webrtc.rs  window_state.rs
docs/: ai-schema.md  quickstart.md
examples/ai-agent-demo/: Cargo.toml
examples/ai-agent-demo/src/: main.rs
examples/counter-canvas/: Cargo.toml
examples/counter-canvas/src/: main.rs
examples/counter-dom/: Cargo.toml  index.html
examples/counter-dom/src/: lib.rs
examples/counter-tui/: Cargo.toml
examples/counter-tui/src/: main.rs
examples/counter-webview/: Cargo.toml
examples/counter-webview/src/: main.rs
examples/counter-webview/ui/: Cargo.toml  index.html
examples/counter-webview/ui/src/: lib.rs
examples/node-graph/: Cargo.toml  README.md
examples/node-graph/src/: main.rs
examples/ssr-page/: Cargo.toml
examples/ssr-page/src/: main.rs
examples/templates-demo/: Cargo.toml  index.html
examples/templates-demo/src/: lib.rs
examples/todo-app/: Cargo.toml  index.html
examples/todo-app/src/: lib.rs
