[workspace]
resolver = "2"
members = [
    "crates/appfront-core",
    "crates/appfront-dom",
    "crates/appfront-canvas",
    "crates/appfront-html",
    "crates/appfront-ai-schema",
    "crates/appfront-macros",
    "crates/appfront-cli",
    "crates/appfront-server",
    "crates/appfront-mcp",
    "crates/appfront-tui",
    "crates/appfront-webview",
]
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/REPLACE_ME/tpt-appfront"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.dev]
debug = "line-tables-only"
