[package]
name = "appfront-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-agnostic UI tree and reactive signal system for TPT AppFront"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
appfront-macros = { path = "../appfront-macros", version = "0.1.0" }
