[package]
name = "appfront-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
appfront-core = { path = "../appfront-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "Text",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "NodeList",
    "HtmlCollection",
] }
