[package]
name = "appfront-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM DOM backend for TPT AppFront"
readme = "README.md"

[dependencies]
appfront-core = { path = "../appfront-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "Text",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "NodeList",
    "HtmlCollection",
] }
