[package]
name = "appfront-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "#[component] and view!/rsx! proc macros for TPT AppFront"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
