[package]
name = "appfront-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server exposing TPT AppFront UI state and actions as tools"

[dependencies]
appfront-core = { path = "../appfront-core", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
