[package]
name = "appfront-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
appfront-core = { path = "../appfront-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "appfront-mcp-e2e-helper"
path = "src/e2e_helper.rs"
test = false
doc = false
