[package]
name = "appfront-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
appfront-core = { path = "../appfront-core" }
appfront-html = { path = "../appfront-html" }
appfront-ai-schema = { path = "../appfront-ai-schema" }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt"] }

[dev-dependencies]
ureq = "2"
