[package]
name = "appfront-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum smart router serving the right TPT AppFront backend per client"

[dependencies]
appfront-core = { path = "../appfront-core", version = "0.1.0" }
appfront-html = { path = "../appfront-html", version = "0.1.0" }
appfront-ai-schema = { path = "../appfront-ai-schema", version = "0.1.0" }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "timeout", "set-header", "cors"] }
tower_governor = { version = "0.4" }
tracing = { version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt"] }

[dev-dependencies]
ureq = "2"
