[package]
name = "appfront-webview"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native webview shell (wry+tao) hosting the TPT AppFront DOM backend"
readme = "README.md"

[dependencies]
appfront-core = { path = "../appfront-core", version = "0.1.0" }
anyhow = "1"
serde_json = "1"
wry = "0.55"
tao = "0.35"
governor = "0.6"
