[package]
name = "tpt-appfront-cli"
description = "The tpt-appfront CLI: init/dev/build/generate/benchmark/optimize for TPT AppFront projects."
readme = "README.md"
keywords = ["cli", "scaffold", "codegen", "ui", "generator"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tpt-appfront"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
