[package]
name = "tpt-appfront-server"
description = "Axum smart router for TPT AppFront: serves the right backend per client type, with PWA support and a POST /command bridge."
readme = "README.md"
keywords = ["axum", "router", "pwa", "server", "ssr"]
categories = ["web-programming::http-server", "web-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tpt-appfront-core = { path = "../tpt-appfront-core" }
tpt-appfront-html = { path = "../tpt-appfront-html" }
tpt-appfront-ai-schema = { path = "../tpt-appfront-ai-schema" }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "timeout", "set-header", "cors"] }
tower_governor = { version = "0.4" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt"] }

[dev-dependencies]
ureq = "2"
