[package]
name = "ssr-page"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tpt-appfront-core = { path = "../../crates/tpt-appfront-core" }
tpt-appfront-server = { path = "../../crates/tpt-appfront-server" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
