[package]
name = "templates-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tpt-appfront-core = { path = "../../crates/tpt-appfront-core" }
tpt-appfront-templates = { path = "../../crates/tpt-appfront-templates" }
tpt-appfront-dom = { path = "../../crates/tpt-appfront-dom" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlInputElement", "HtmlElement", "Node"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
